Bulletproof CORS config for network error fix